# marquee_board

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_script.sh  deploy.sh  main.cpp
.github/workflows/: main.yml  master.yml
src/: CMakeLists.txt  main.cpp  marquee.cpp  marquee.h  matrix.h
