cmake_minimum_required (VERSION 3.0)
project (marquee-board VERSION 1.0)

add_subdirectory(src)

include(InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Ramón van der Aar")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "pigpiod")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "armhf")
set(CPACK_PACKAGE_CONTACT "https://github.com/rvanderaar")
set(CPACK_PACKAGE_VERSION_MAJOR "${marquee-board_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${marquee-board_VERSION_MINOR}")
set(CPACK_SYSTEM_NAME "armhf")
include(CPack)
